# Embed2-opdracht4

./: readme.md
deel1/: CMakeLists.txt  t.c  ud_ucase.h  ud_ucase_cl.c  ud_ucase_sv.c
deel2/: CMakeLists.txt  http_server.c
